<resources>
    <string name="app_name">Cocktail app</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="no_results_found">No results found</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="unknown_error_occured">Unknown error occurred</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="random">Random</string>
    <string name="retry">retry</string>
    <string name="no_description_found">No description found for: \n %s</string>
    <string name="press_the_stars_to_save_your_favorite_here">Press the stars to save your favorites here</string>
    <string name="delete_all_favorites">Delete all favorites</string>
    <string name="search_instructions">Tap the magnifying glass to start searching</string>
    <string name="search_cocktail">Search cocktail</string>
    <string name="search_ingredient">Search ingredient</string>
    <string name="search_cocktail_by_ingredient">Search cocktail by ingredient</string>
</resources>