<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />

    <item
        android:id="@+id/action_search_cocktail"
        android:title="@string/search_cocktail"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_search_ingredient"
        android:title="@string/search_ingredient"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_search_cocktail_by_ingredient"
        android:title="@string/search_cocktail_by_ingredient"
        app:showAsAction="never"
        />

</menu>