<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment"
    >

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.home.cocktailapp.features.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites"
        >
        <action
            android:id="@+id/action_favoritesFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.home.cocktailapp.features.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        >
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.home.cocktailapp.features.search.cocktails.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search"
        >
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.home.cocktailapp.features.details.DetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_details"
        >
        <argument
            android:name="cocktail"
            app:argType="com.home.cocktailapp.data.Cocktails"
            />
    </fragment>
    <fragment
        android:id="@+id/searchIngredientsFragment"
        android:name="com.home.cocktailapp.features.search.ingredients.SearchIngredientsFragment"
        android:label="Search Ingredients"
        />
</navigation>