<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.search.ingredients.SearchIngredientsFragment"
    >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/recycler_view_ingredient"
                />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_error"
                android:layout_centerInParent="true"
                android:text="@string/retry"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:gravity="center"
                android:visibility="gone"
                tools:text="Error"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/text_view_no_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_results_found"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/text_view_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_instructions"
                android:visibility="visible"
                />

        </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>